--- a/tools/nescc.in
+++ b/tools/nescc.in
@@ -76,7 +76,7 @@ for ($i = 0; $i <= $#ARGV; $i++) {
 
 
 if ($print_version) {
-    print "ncc: @PACKAGE_VERSION@\n";
+    print "nescc: @PACKAGE_VERSION@\n";
     print "$gcc: ";
     system "$gcc --version";
     exit 0;
