update man pages, switch from html to real man pages note that the ncc, mig, ncg, nesdoc man pages are now in TinyOS

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 
+dist_man_MANS = nescc.1 nescc-mig.1 nescc-ncg.1
+
 EXTRA_DIST =					\
 	debugging.html				\
 	debugging_files/complete-setup.jpg	\
@@ -7,10 +9,7 @@ EXTRA_DIST =					\
 	debugging_files/micamod.jpg		\
 	debugging_files/progboard.jpg		\
 	envtarget.html				\
-	mig.html				\
-	ncc.html                                \
-	ncg.html                                \
-	nesdoc.html                             \
+	user/binary-components.txt		\
 	user/generics-1.2.txt			\
 	user/network-types.txt			\
 	ref.pdf
