Cory: The fix is very small.  nescc-mig and nescc-ncg currently join arguments into a string for their open commands, which causes perl to interpret the arguments in a shell-like context, which cause a level of \'s to be removed.  Directly passing the argument list to open causes the arguments to be passed verbatim.

--- a/tools/nescc-mig.in
+++ b/tools/nescc-mig.in
@@ -86,7 +86,7 @@ push @args, "nesc";
 push @args, $cfile;
 
 print STDERR join(" ", @args), "\n" if $verbose;
-open(NESC, '-|', join(" ", @args)) or die "ncc not found";
+open(NESC, '-|', @args) or die "ncc not found";
 @spec = <NESC>;
 close NESC;
 
