make/dist stuff

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,17 +1,38 @@
 AUTOMAKE_OPTIONS = foreign
 
+nccdatadir=$(datadir)/ncc
+nccdocdir=$(nccdatadir)/doc
+userdocdir=$(nccdocdir)/user
+dumpdocdir=$(nccdocdir)/dump
+dbgdocdir=$(nccdocdir)/debugging_files
+
+
 dist_man_MANS = nescc.1 nescc-mig.1 nescc-ncg.1
 
-EXTRA_DIST =					\
+nccdoc_DATA = 					\
 	COPYING-DOC				\
 	COPYRIGHT				\
-	debugging.html				\
-	$(wildcard debugging_files/*.jpg)	\
-	$(wildcard dump/*.dsd)			\
+	README					\
+	mica-debugging.html			\
 	envtarget.html				\
 	nesc-debugging.html			\
-	ref.pdf					\
-	$(wildcard user/*.txt)			\
+	ref.pdf
+
+dbgdoc_DATA =					\
+	$(wildcard debugging_files/*.jpg)
+
+dumpdoc_DATA =					\
+	$(wildcard dump/*.dsd)
+
+userdoc_DATA=					\
+	$(wildcard user/*.txt)
+
+EXTRA_DIST = 					\
+	ref.tex					\
+	$(nccdoc_DATA)				\
+	$(userdoc_DATA)				\
+	$(dumpdoc_DATA)				\
+	$(dbgdoc_DATA)
 
 ref.pdf: ref.tex
 	pdflatex ref.tex
