avoid packed attribute warnings check for 64-bit platforms at configure time (for libcompat)

--- a/src/configure.in
+++ b/src/configure.in
@@ -57,6 +57,7 @@ AM_CONDITIONAL(USING_RCC, test "$RCC" = yes)
 AC_MSG_RESULT($RCC)
 
 AC_CHECK_SIZEOF(long long)
+AC_CHECK_SIZEOF(void *)
 
 AC_FUNC_ALLOCA
 
