--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -30,7 +30,7 @@ wiringdir=$(javadir)/net/tinyos/nesc/wiring
 
 bin_SCRIPTS = nescc-mig nescc-ncg nescc nescc-diff
 
-ncclib_DATA = genjava.pm gencstjava.pm gencsharp.pm gencstc.pm migdecode.pm first-avr5.x second-avr5.x nesc_nx.h
+ncclib_DATA = genjava.pm gencstjava.pm gencsharp.pm gencstc.pm genpython.pm gencstpython.pm migdecode.pm first-avr5.x second-avr5.x nesc_nx.h
 ncclib_SCRIPTS = smalldiff
 
 emacs_DATA =					\
