--- a/tools/nescc-ncg.in
+++ b/tools/nescc-ncg.in
@@ -34,6 +34,12 @@ for ($i = 0; $i <= $#ARGV; $i++) {
 	elsif (/^-java-extends=(.*)$/) {
 	    $java_extends = $1;
 	}
+	if (/^-python-classname=(.*)$/) {
+	    $python_classname = $1;
+	}
+	elsif (/^-python-extends=(.*)$/) {
+	    $python_extends = $1;
+	}
 	elsif (/^-o/) {
 	    ($i, $ofile) = &extractarg($i);
 	}
@@ -143,6 +149,11 @@ sub usage()
     print STDERR "      -java-classname=FULL-CLASS-NAME Select class name (required)\n";
     print STDERR "      -java-extends=CLASS-NAME        Select class to extend\n";
     print STDERR "                                      (default net.tinyos.message.Message)\n";
+    print STDERR "    python:\n";
+    print STDERR "      -python-classname=FULL-CLASS-NAME Select class name (required)\n";
+    print STDERR "      -python-extends=CLASS-NAME        Select class to extend\n";
+    print STDERR "                                      (default tinyos.message.Message)\n";
+
     exit 2;
 }
 
