--- a/tools/java/net/tinyos/nesc/dump/xml/Makefile.am
+++ b/tools/java/net/tinyos/nesc/dump/xml/Makefile.am
@@ -10,12 +10,13 @@ AUTOMAKE_OPTIONS = foreign
 
 java_files = $(wildcard *.java)
 class_files = $(java_files:.java=.class)
-EXTRA_DIST = README $(java_files)
+EXTRA_DIST = $(java_files)
+ROOT=../../../../..
 
 noinst_DATA = $(class_files)
 
 $(class_files): $(java_files)
-	javac $(java_files)
+	CLASSPATH=`cygpath -w $(ROOT)  2>/dev/null || echo $(ROOT)` javac $(java_files)
 
 clean mostlyclean:
 	rm -f *.class
