rename README to OVERVIEW to avoid confusion with top-level README

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -13,6 +13,7 @@ nccdoc_DATA = 					\
 	COPYING-DOC				\
 	COPYRIGHT				\
 	INDEX					\
+	OVERVIEW				\
 	../README				\
 	mica-debugging.html			\
 	envtarget.html				\
