--- a/src/configure.in
+++ b/src/configure.in
@@ -62,7 +62,7 @@ AC_CHECK_SIZEOF(void *)
 AC_FUNC_ALLOCA
 
 AC_REPLACE_FUNCS(strtold)
-AC_CHECK_FUNCS(basename poll realpath mmap)
+AC_CHECK_FUNCS(poll realpath mmap)
 AC_CHECK_FUNCS(regcomp, [ REGCOMP=yes ])
 AC_CHECK_FUNCS(fnmatch, [ FNMATCH=yes ])
 
