--- a/src/configure.in
+++ b/src/configure.in
@@ -69,6 +69,8 @@ AC_CHECK_FUNCS(fnmatch, [ FNMATCH=yes ])
 AM_CONDITIONAL(NEED_FNMATCH, test "$FNMATCH" != yes)
 AM_CONDITIONAL(NEED_REGEX, test "$REGCOMP" != yes)
 
+AM_ICONV
+
 RC_CHECK_DECL(strtold, stdlib.h)
 
 AC_OUTPUT(
