support for safe tinyos

--- a/tools/nescc.in
+++ b/tools/nescc.in
@@ -117,6 +117,9 @@ push @new_args, "-DNESC=$numversion";
 unshift @new_args, "-I$NCDIR";
 unshift @new_args, "-fnesc-include=nesc_nx";
 
+my $safe_home = $ENV{'TOSDIR'}."/lib/safe";
+unshift @new_args, "-fnesc-include=${safe_home}/include/annots_stage1";
+
 #
 # documentation generation options
 #
