--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -26,7 +26,7 @@ config.cache
 autoconf.h
 autoconf.h.in
 config.log
-config.status
+config.status*
 config-aux
 configure
 parser
@@ -39,3 +39,4 @@ stamp-h.in
 nesc1
 autom4te.cache
 stamp-h1
+.gdb_history
