--- a/src/configure.in
+++ b/src/configure.in
@@ -33,15 +33,6 @@ AM_INIT_AUTOMAKE
 : ${CFLAGS=-g}
 
 AC_CANONICAL_HOST
-AC_MSG_CHECKING(for darwin)
-case $host in
-  *-*-darwin*)
-    CFLAGS="$CFLAGS -Wno-long-double"
-    AC_MSG_RESULT(yes)
-    ;;
-  *)
-    AC_MSG_RESULT(no)
-esac
 AC_SUBST(CPPFLAGS)
 AC_SUBST(CFLAGS)
 
@@ -50,6 +41,7 @@ AC_PROG_RANLIB
 AC_PROG_MAKE_SET
 
 CPARSE_TRY_CFLAGS(-Wall)
+CPARSE_TRY_CFLAGS(-Wno-long-double)
 
 AC_MSG_CHECKING(whether we are using rcc)
 AC_TRY_COMPILE([], [void * traditional pointer;], RCC=yes, RCC=no)
